XPath: Fix context node of rhs of union operator

The new behavior matches to Edge and Firefox.

Bug: 908632
Change-Id: I0dbb861e93836284a0c474cc486650dab27dc7b4
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1973333
Commit-Queue: Kent Tamura <tkent@chromium.org>
Reviewed-by: Daniel Cheng <dcheng@chromium.org>
Cr-Commit-Position: refs/heads/master@{#726224}