third_party/blink/renderer/core/xml/xpath_predicate.cc
@@ -232,10 +232,16 @@ Value LogicalOp::Evaluate(EvaluationContext& context) const {
 }
 
 Value Union::Evaluate(EvaluationContext& context) const {
+  // SubExpr(0)->Evaluate() can change the context node, but SubExpr(1) should
+  // start with the current context node.
+  EvaluationContext cloned_context = context;
   Value lhs_result = SubExpr(0)->Evaluate(context);
-  Value rhs = SubExpr(1)->Evaluate(context);
+  Value rhs = SubExpr(1)->Evaluate(cloned_context);
+  context.had_type_conversion_error |= cloned_context.had_type_conversion_error;
 
   NodeSet& result_set = lhs_result.ModifiableNodeSet(context);
+  // We should pass |&context|, not |&cloned_context|, in order to propagate
+  // a type conversion error to the parent context.
   const NodeSet& rhs_nodes = rhs.ToNodeSet(&context);
 
   HeapHashSet<Member<Node>> nodes;
